examples/tests/invalid/break_scope_invalid.w
bring cloud;

    break;
//  ^^^^^^ Expected break statement to be inside of a loop (while/for)

new cloud.Function(inflight () => {
    break;
//  ^^^^^^ Expected break statement to be inside of a loop (while/for)
});